# OgsSgfDownloader

./: .gitignore  OgsSgfDownloader.sln  README.md
OgsSgfDownloader/: OgsSgfDownloader.csproj  Program.cs
OgsSgfDownloader/Models/: Black.cs  HistoricalRatings.cs  Overall.cs  Player.cs  Players.cs  Ratings.cs  Related.cs  Result.cs  Root.cs  White.cs
OgsSgfDownloaderTelegramBot/: OgsSgfDownloaderTelegramBot.csproj  Program.cs
Shared/: Library.cs
ninebynine/: Cargo.toml  README.md
ninebynine/src/: main.rs  structs.rs
