[package]
name = "ninebynine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
requestty = "0.5.0"
spinners = "4.1.0"
chrono = { version = "0.4.23", features = ["serde"] }
itertools = "0.10.5"
zip = "0.6.3"
async-std = "1.12.0"
indicatif = "0.17.2"
rand = "0.8.5"