[package]
name = "ninebynine"
version = "1.0.2"
edition = "2021"
description = "Tool for download 9x9 SGF files from OGS server."
readme = "README.md"
repository = "https://github.com/efimovnikita/OgsSgfDownloader/tree/abc250c7399d969a7085507e2ccf34743dfd99f3/ninebynine"
keywords = ["go", "baduk", "weiqi"]
categories = ["command-line-utilities", "games"]
license = "MIT OR Apache-2.0"

exclude = [
    ".idea/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
requestty = "0.5.0"
chrono = { version = "0.4.23", features = ["serde"] }
itertools = "0.10.5"
async-std = "1.12.0"
indicatif = "0.17.2"
rand = "0.8.5"